# poor_mans_http_server

./: .gitignore  CMakeLists.txt  Makefile  README.md  heaptrack.server.zst  readme.md  server
include/: arp.h  arp_cache.h  buff.h  dpdk.h  eth.h  event_loop.h  handler.h  http_types.h  icmp.h  ip.h  net_addr.h  parser.h  router.h  tap.h  tcp.h  unique_fd.h  utils.h
scripts/: init.bash  to_kernel.bash  to_vfio.bash
src/: main.cpp
src/core/: buff.cpp  dpdk.cpp  event_loop.cpp  tap.cpp  utils.cpp
src/http/: http_types.h  parser.cpp  request.h  response.h
src/link/: arp.cpp  eth.cpp
src/net/: icmp.cpp  ip.cpp  socket.cpp  socket.h
src/router/: router.cpp  router.h
src/transport/: tcp.cpp
